--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -29,29 +29,25 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Start services with docker compose
+        timeout-minutes: 5
         run: |
           docker compose up -d --build --wait
-          echo "✅ All services started successfully"
-
-      - name: Wait for services to be healthy
-        run: |
-          echo "Waiting for services to become healthy..."
-          timeout 120 bash -c 'until docker compose ps | grep -q "(healthy).*safeship-app"; do sleep 5; done'
-          echo "✅ App container is healthy"
+          docker compose ps
+          echo "✅ All services started and healthy"
 
       - name: Run health check
         run: |
-          response=$(curl -sf http://localhost:8080/health)
+          response=$(curl -sf --max-time 10 http://localhost:8080/health)
           echo "Health check response: $response"
-          if [[ "$response" != *"Healthy"* ]]; then
-            echo "❌ Health check failed"
+          if [[ "$response" != '"Healthy"' ]]; then
+            echo "❌ Health check failed - expected '\"Healthy\"', got '$response'"
             exit 1
           fi
           echo "✅ Health check passed"
 
       - name: Test home page loads
         run: |
-          status_code=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/)
+          status_code=$(curl -sL -o /dev/null -w "%{http_code}" --max-time 10 http://localhost:8080/)
           if [[ "$status_code" != "200" ]]; then
             echo "❌ Home page returned status $status_code"
             exit 1
@@ -60,7 +56,7 @@ jobs:
 
       - name: Test products page loads
         run: |
-          status_code=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/Products)
+          status_code=$(curl -s -o /dev/null -w "%{http_code}" --max-time 10 http://localhost:8080/Products)
           if [[ "$status_code" != "200" ]]; then
             echo "❌ Products page returned status $status_code"
             exit 1
