Run integration test on all workflow changes It's important to catch errors that newer actions might introduce in the build stage

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -10,7 +10,7 @@ on:
       - 'src/**'
       - 'docker-compose.yml'
       - 'scripts/**'
-      - '.github/workflows/integration-test.yml'
+      - '.github/workflows/*.yml'
   workflow_dispatch:
 
 env:
